[gd_scene load_steps=3 format=3 uid="uid://bcffmi542th0b"]

[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="1_o51un"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f42am"]
resource_local_to_scene = true
bg_color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o51un")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f42am")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.5
offset_top = -193.0
offset_right = 172.5
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_right = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Paused"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resume"

[node name="Button2" type="Button" parent="Panel2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="Button3" type="Button" parent="Panel2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="Button4" type="Button" parent="Panel2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"

[connection signal="pressed" from="Panel2/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel2/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel2/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel2/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
